<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SplashScreenActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splashimg" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="120dp"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/heading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/heading_name"
        android:textColor="@color/radiantGreen"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <TextView
        android:id="@+id/favour_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/heading_sub_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/heading_tv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/heading_sub_text2"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/favour_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:text="@string/signin_phone_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/or_sign_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/or_sign_in"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/start_btn" />

    <Button
        android:id="@+id/google_btn"
        style="@style/ButtonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="left|center_vertical"
        android:drawableLeft="@drawable/googleimg"
        android:gravity="center_vertical"
        android:paddingLeft="110dip"
        android:text="@string/google_text"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>